src/app/shared/login/login.component.css
/* header/footer wrapper */
#bodyDiv {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
    min-height: 100vh;
}

.header {
    width: 100%;
}

#contentWrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 90%;
    flex: 1;
}

.footer {
    position: relative;
    bottom: 0;  
    width: 100%;
    margin-top: 300px;
}
/* header/footer wrapper */

#login {
    width: 20%;
    display: flex;
    flex-direction: column; 
    justify-content: center;
    align-items: center;

}

#usernameLabel {
    margin-right: 20px;
}

#usernameInput {
    margin-bottom: 5px;
}

#passwordLabel {
    margin-right: 20px;
    margin-left: 3px;
}

#passwordInput {
    margin-bottom: 10px;
}

#usernameSection {
    margin-left: 4rem;
}

#credentialsDialogButton {
    margin-left: 1rem;
}

